create search pannel

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react_router",
-  "homepage": "https://AlexandYOr.github.io/react-router",
+  "homepage": "https://alexandyor.github.io/react_router",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
